--- a/index.html
+++ b/index.html
@@ -86,109 +86,6 @@
         </div>
       </nav>
     </header>
-    <!-- end header section -->
-    <!-- slider section -->
-
-    <!-- <section class="slider_section">
-      <div class="slider_container">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <h1>
-                        Welcome To Our <br>
-                        Game Shop
-                      </h1>
-                      <p>
-                        Game Shop es una tienda de videojuegos en línea que ofrece una amplia gama de juegos de PC, PS4,
-                        Xbox, Nintendo y más. Compra los últimos juegos, consolas y accesorios.
-
-                      </p>
-                      <a href="">
-                        Escribenos
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-5 ">
-                    <div class="img-box">
-                      <img src="images/hero-banner.webp" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item ">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <h1>
-                        Welcome To Our <br>
-                        Gift Shop
-                      </h1>
-                      <p>
-                        Sequi perspiciatis nulla reiciendis, rem, tenetur impedit, eveniet non necessitatibus error
-                        distinctio mollitia suscipit. Nostrum fugit doloribus consequatur distinctio esse, possimus
-                        maiores aliquid repellat beatae cum, perspiciatis enim, accusantium perferendis.
-                      </p>
-                      <a href="">
-                        Contact Us
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-5 ">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item ">
-              <div class="container-fluid">
-                <div class="row">
-                  <div class="col-md-7">
-                    <div class="detail-box">
-                      <h1>
-                        Welcome To Our <br>
-                        Gift Shop
-                      </h1>
-                      <p>
-                        Sequi perspiciatis nulla reiciendis, rem, tenetur impedit, eveniet non necessitatibus error
-                        distinctio mollitia suscipit. Nostrum fugit doloribus consequatur distinctio esse, possimus
-                        maiores aliquid repellat beatae cum, perspiciatis enim, accusantium perferendis.
-                      </p>
-                      <a href="">
-                        Contact Us
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-5 ">
-                    <div class="img-box">
-                      <img src="images/slider-img.png" alt="" />
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="carousel_btn-box">
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-              <i class="fa fa-arrow-left" aria-hidden="true"></i>
-              <span class="sr-only">Previous</span>
-            </a>
-            <img src="images/line.png" alt="" />
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-              <i class="fa fa-arrow-right" aria-hidden="true"></i>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
-        </div>
-      </div>
-    </section> -->
     <div id="carouselExampleCaptions" class="carousel slide">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -459,51 +356,11 @@
 
   <!-- saving section -->
 
-  <section class="saving_section ">
-    <div class="box">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="img-box">
-              <img src="images/saving-img.png" alt="">
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="detail-box">
-              <div class="heading_container">
-                <h2>
-                  Best Savings on <br>
-                  new arrivals
-                </h2>
-              </div>
-              <p>
-                Qui ex dolore at repellat, quia neque doloribus omnis adipisci, ipsum eos odio fugit ut eveniet
-                blanditiis praesentium totam non nostrum dignissimos nihil eius facere et eaque. Qui, animi obcaecati.
-              </p>
-              <div class="btn-box">
-                <a href="#" class="btn1">
-                  Buy Now
-                </a>
-                <a href="#" class="btn2">
-                  See More
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- end saving section -->
-
-  <!-- why section -->
-
   <section class="why_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Why Shop With Us
+          Porque comprar con nosotros
         </h2>
       </div>
       <div class="row">
@@ -600,10 +457,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Fast Delivery
+                Entrega inmediata
               </h5>
               <p>
-                variations of passages of Lorem Ipsum available
+                Siempre tenemos stock de todos nuestros productos
               </p>
             </div>
           </div>
@@ -718,10 +575,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Free Shiping
+                Envio gratis
               </h5>
               <p>
-                variations of passages of Lorem Ipsum available
+                Entregas gratuitas en todos nuestros productos
               </p>
             </div>
           </div>
@@ -743,10 +600,10 @@
             </div>
             <div class="detail-box">
               <h5>
-                Best Quality
+                Garantia de calidad
               </h5>
               <p>
-                variations of passages of Lorem Ipsum available
+                Todos nuestros productos tienen garantia de calidad
               </p>
             </div>
           </div>
@@ -754,8 +611,6 @@
       </div>
     </div>
   </section>
-
-  <!-- end why section -->
 
 
   <!-- gift section -->
