--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
           <img src="images/kratos.png">
           <span>
             Kratos Game Shop
-            Kratos Game Shop
           </span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -68,13 +67,8 @@
           </ul>
           <div class="user_option">
             <a href="">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span>
-                Login
-              </span>
-            </a>
-            <a href="">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+              <span class="cart-badge">0</span>
             </a>
             <form class="form-inline ">
               <button class="btn nav_search-btn" type="submit">
@@ -142,207 +136,7 @@
           Ultimos Juegos
         </h2>
       </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/Marvel-Spiderman-2.jpg" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Marvel Spider Man 2 PS5
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $44.125 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Fisico
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p2.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Watch
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $300
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p3.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Teddy Bear
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $110
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Flower Bouquet
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $45
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p5.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Teddy Bear
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $95
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p6.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Flower Bouquet
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $70
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p7.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Watch
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $400
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/p8.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Ring
-                </h6>
-                <h6>
-                  Price
-                  <span>
-                    $450
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  New
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
+      <div class="row row-cols-4 g-3" id="game-grid">
       </div>
       <div class="btn-box">
         <a href="">
@@ -351,10 +145,6 @@
       </div>
     </div>
   </section>
-
-  <!-- end shop section -->
-
-  <!-- saving section -->
 
   <section class="why_section layout_padding">
     <div class="container">
@@ -612,9 +402,6 @@
     </div>
   </section>
 
-
-  <!-- gift section -->
-
   <section class="gift_section layout_padding-bottom">
     <div class="box ">
       <div class="container-fluid">
@@ -653,12 +440,6 @@
       </div>
     </div>
   </section>
-
-
-  <!-- end gift section -->
-
-
-  <!-- contact section -->
 
   <section class="contact_section ">
     <div class="container px-0">
@@ -705,9 +486,6 @@
     </div>
   </section>
 
-  <!-- end contact section -->
-
-  <!-- client section -->
   <section class="client_section layout_padding">
     <div class="container">
       <div class="heading_container heading_center">
@@ -799,9 +577,6 @@
       </div>
     </div>
   </section>
-  <!-- end client section -->
-
-  <!-- info section -->
 
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
@@ -889,8 +664,6 @@
 
   </section>
 
-  <!-- end info section -->
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
@@ -899,7 +672,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="js/custom.js"></script>
-
+  <script src="js/games.js"></script>
 </body>
 
 </html>
