--- a/shop.html
+++ b/shop.html
@@ -96,217 +96,12 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          Ultimos productos
+          Todos nuestros juegos
         </h2>
       </div>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/Marvel-Spiderman-2.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Marvel Spider Man 2 PS5
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $44.125 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Fisico
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/ea-sports-fc-25-standard-edition-ps5.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  EA SPORTS FC 25 Standard Edition PS5
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $23.250 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/dragon-ball-sparking-zero-ps5.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  DRAGON BALL Sparking ZERO PS5
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $55.500 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/ufc-5-ps5.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  UFC 5 PS5
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $48.875 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/ea-sports-fc-25-standard-edition-ps5.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  EA SPORTS FC 25 Standard Edition PS5 digital
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $23.250 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/Mortal-Kombat-1-2.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Mortal Kombat 1 PS5 digital
+      <div class="row row-cols-4 g-3" id="all-game-grid">
+      </div>
 
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $27.625 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/rise-of-the-ronin-ps5.jpg" alt="" width="200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Rise of the Ronin PS5 digital
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $58.625 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 col-lg-3">
-          <div class="box">
-            <a href="">
-              <div class="img-box">
-                <img src="images/dragons-dogma-2-ps5.jpg" alt="" " width=" 200px" height="200px">
-              </div>
-              <div class="detail-box">
-                <h6>
-                  Dragons Dogma 2 PS5 digital
-                </h6>
-                <h6>
-                  Precio:
-                  <span>
-                    Desde $51.250 ARS
-                  </span>
-                </h6>
-              </div>
-              <div class="new">
-                <span>
-                  Digital
-                </span>
-              </div>
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="btn-box">
-        <a href="">
-          Ver todos los productos
-        </a>
-      </div>
     </div>
   </section>
 
@@ -408,6 +203,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
   </script>
   <script src="js/custom.js"></script>
+  <script src="js/games.js"></script>
+
 
 </body>
 
