--- a/checkout.html
+++ b/checkout.html
@@ -46,25 +46,25 @@
                 <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
                     <ul class="navbar-nav  ">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+                            <a class="nav-link" href="index.html">Inicio <span class="sr-only"></span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="shop.html">
-                                Shop
+                                Tienda
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="why.html">
-                                Why Us
+                                Nosotros
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="testimonial.html">
-                                Testimonial
+                                Opiniones
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact Us</a>
+                            <a class="nav-link" href="contact.html">Contacto</a>
                         </li>
                     </ul>
                     <div class="user_option">
