--- a/contact.html
+++ b/contact.html
@@ -71,9 +71,9 @@
             </li>
           </ul>
           <div class="user_option">
-
-            <a href="">
+            <a href="./checkout.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
+              <span class="cart-badge">0</span>
             </a>
             <form class="form-inline ">
               <button class="btn nav_search-btn" type="submit">
