--- a/testimonial.html
+++ b/testimonial.html
@@ -71,7 +71,7 @@
             </li>
           </ul>
           <div class="user_option">
-            <a href="">
+            <a href="./checkout.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
               <span class="cart-badge">0</span>
             </a>
