--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <header class="header_section">
       <nav class="navbar navbar-expand-lg custom_nav-container ">
         <a class="navbar-brand" href="index.html">
-          <img src="images/kratos.png">
-          <span>
+          <img id="navbar-img" src="images/kratos.png">
+          <span class="">
             Kratos Game Shop
           </span>
         </a>
